--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,206 +1,252 @@
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-* {
-box-sizing: border-box;
-box-sizing: content-box;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
 
 body {
-color: #777777;
-width: 960px;
-border: #dddddd;
-text-align: justify;
-margin: 0;
-padding:0;
-font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-height: 500px;
-}
-
-
-header  {
-width: 100%;
-background-color: #ffffff;
-color: #777777 ;
-border-color: #cccccc;
-padding: 20px;
-float: left;
-line-height: 150%;
-position: fixed;
-top: 0;
-}
-
-section {
-    width: 960px;
-    clear: both;
-}
-
-.header {
-background:#ffffff;
-border-color: #cccccc;
-width: 960px;
-float: left;
-
-}
-h1 { 
-padding: 20px;
-font-size: 28px;
-font-family: 'Georgia', Times, 'Times New Roman', serif;
-color: #eee;
-text-align: left;
-background-color: #4aaaa5;
-float: left;
-position: fixed;
-top: 0;
-left: 30px;
-margin: 0;
-}
-
-nav {
-width: 33%;
-color: #777777;
-background-color:#ffffff ;
-text-align: right;
-padding : 20px;
-float: right;
-top: 0;
-right: 0;
-clear: both;
-line-height: 20pt;
-}
-
-.content {
-  min-height: calc(100vh - 70px);
-  background-image: url("..portfolio/assets/images/carbon_fibre_v2.png");
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-
-  
-.full {
-  width: 960px;
   color: #777777;
-  background: #fff;
-  
-  margin-top: 65px;
-}
-
-h2 { 
   width: 100%;
-  font-size: 28px;
-  float: left; 
-  color:#4aaaa5;
-  padding: 20px; 
-  left: 30px;
-  background-color:#fff;
-  margin-left: 20px;
-  }
-
-
-
-img {
-  float: left;
+  border: #dddddd;
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
+  height: 500px;
 }
 
-
-#profile-img {
-width: 15%;
-float:left;
-position: relative;
-overflow: auto;
-top: 0;
-height: auto;
-margin: 20px;
-left: 20px;
-padding-right: 20px;
+header {
+  border-bottom: solid thin #dddddd;
 }
 
-
-p {
-margin-right: 40px;
-margin-left: 20px;
-padding: 20px;
-}
-
-.container { 
-  padding: 20px;
-  width: 960px;
-  align-content: center; 
-}
-
-.container-2{
-  padding: 20px;
-  width: 960px;
-  align-content: center; 
-  margin-top: 20px;
-}
-
-.button1{
-  background-color: #4aaaa5; /* Teal */
-  border: none;
+header nav a.active {
+  background-color: var(--color-teal);
+  padding: 10px;
+  border-radius: 5px;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  clear: both;
+}
+h1 {
+  background-color: #4aaaa5;
+  padding: 20px;
+  width: 355px;
+  color: #dddddd;
+  margin: 0;
+}
+/* .h2 {
+    
+} */
+
+body {
+  color: #777777;
+  width: 100%;
+  border: #dddddd;
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+  height: 500px;
+  background-image: url("../images/carbon_fibre_v2.png");
+  background-repeat: repeat;
+  background-position: cover;
 }
 
-footer { 
-    background-color: #666666;
-    padding: 20px;
-    color: white;
+h1 {
+  background-color: navy;
+  padding: 20px;
+  width: 355px;
+  color: #dddddd;
+  margin: 0;
+  font-size: 40px;
+}
+
+/* .section-container {
+  background-image: url("../intersection.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+} */
+
+/* .main {
+  background-image: url("../images/carbon_fibre_v2.png");
+} */
+
+.container {
+  background-color: white;
+  border-color: #dddddd;
+  border: solid thin black;
+  padding: 20px;
+  border: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
     width: 100%;
-    height: 30px;
-    border-top: 8px solid #4aaaa5;
-   }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .column {
+    width: 50%;
+  }
+}
+
+/* .media  {
+    
+    } */
+
+.div-col {
+  padding: 20px;
+}
+
+/* .div-text-center    {
+    
+} */
+
+.container-2 {
+  background-color: #666666;
+  border-top: 8px solid navy;
+  color: #dddddd;
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.footer mt-auto py-3 {
+  background-color: #666666;
+  padding: 20px;
+  height: 100px;
+  width: 100%;
+  bottom: 0;
+  border-top: 8px solid navy;
+  position: fixed;
+}
